force-app/main/default/objects/Opportunity/fields/Days_Since_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Activity__c</fullName>
    <label>Days Since Last Activity</label>
    <formula>IF(ISBLANK(LastActivityDate), 999, TODAY() - LastActivityDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>