force-app/main/default/objects/Opportunity/fields/Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Category__c</fullName>
    <label>Forecast Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Omitted</fullName><default>false</default><label>Omitted</label></value>
            <value><fullName>Pipeline</fullName><default>true</default><label>Pipeline</label></value>
            <value><fullName>Best Case</fullName><default>false</default><label>Best Case</label></value>
            <value><fullName>Commit</fullName><default>false</default><label>Commit</label></value>
            <value><fullName>Closed</fullName><default>false</default><label>Closed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>