force-app/main/default/objects/Opportunity/fields/Revenue_Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Confidence_Score__c</fullName>
    <label>Revenue Confidence Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>