force-app/main/default/objects/Opportunity/fields/Revenue_Impact__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Impact__c</fullName>
    <label>Revenue Impact</label>
    <formula>Amount - (Amount * IF(ISBLANK(Discount_Percentage__c), 0, Discount_Percentage__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>