force-app/main/default/objects/Opportunity/validationRules/Amount_Must_Be_Greater_Than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Must_Be_Greater_Than_Zero</fullName>
    <active>true</active>
    <description>Opportunity Amount must be greater than 0.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Amount)), Amount &lt;= 0)</errorConditionFormula>
    <errorDisplayField>Amount</errorDisplayField>
    <errorMessage>Opportunity Amount must be greater than 0.</errorMessage>
</ValidationRule>