force-app/main/default/objects/Opportunity/validationRules/Close_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_Date_Validation</fullName>
    <active>true</active>
    <description>Close date cannot be more than 2 years in the future for open opportunities.</description>
    <errorConditionFormula>AND(
  NOT(IsClosed),
  CloseDate &gt; ADDMONTHS(TODAY(), 24)
)</errorConditionFormula>
    <errorDisplayField>CloseDate</errorDisplayField>
    <errorMessage>Close date cannot be more than 2 years in the future.</errorMessage>
</ValidationRule>