force-app/main/default/objects/Opportunity/validationRules/Discount_Cannot_Exceed_50_Percent.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_Cannot_Exceed_50_Percent</fullName>
    <active>true</active>
    <description>Discount percentage cannot exceed 50%.</description>
    <errorConditionFormula>Discount_Percentage__c &gt; 0.50</errorConditionFormula>
    <errorDisplayField>Discount_Percentage__c</errorDisplayField>
    <errorMessage>Discount cannot exceed 50%. Please adjust the discount percentage.</errorMessage>
</ValidationRule>